# arrivals

./: .gitignore  CMakeLists.txt  README.md  cta.csv  parser.py  sdkconfig.defaults  version.txt
.github/workflows/: build.yml  publish.yml
components/api/: CMakeLists.txt  Kconfig  api.c  api.h  http_client.c
components/api/private/: http_client.h
components/config/: CMakeLists.txt  config.c  config.h
components/cta/: CMakeLists.txt  cta.c  cta.h
components/cta/system_info/: leds.txt  parser.py
components/cta/system_info/lines/: BLUE_LINE.txt  BROWN_LINE.txt  GREEN_LINE.txt  ORANGE_LINE.txt  PINK_LINE.txt  PURPLE_LINE.txt  RED_LINE.txt  YELLOW_LINE.txt
components/display/: CMakeLists.txt  display.c  display.h  idf_component.yml
components/http_client/: CMakeLists.txt  http_client.c  http_client.h
components/http_server/: CMakeLists.txt  http_server.c  http_server.h
components/http_server/webpage/: index.html  minify.py  webpage.c
components/ui/: CMakeLists.txt  arimo_32.c  ui.c  ui.h
components/ui/callbacks/: ui_callbacks.h
components/ui/callbacks/esp32/: ui_callbacks.c
components/ui/callbacks/x86_64/: ui_callbacks.c
components/ui/fonts/: arimo_18.c  arimo_24.c
components/ui/x86_64/: CMakeLists.txt  lv_conf.h  main.c
components/wifi/: CMakeLists.txt  Kconfig  wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  arrivals.c
